--- a/templates/dashboards/all_admin_pages/myTeachers.html
+++ b/templates/dashboards/all_admin_pages/myTeachers.html
@@ -14,7 +14,7 @@
             {%for teachers in teacher%}
             <a href="{% url 'teacher_detail' user_id=teachers.user.id %}">
                 <div class="h-[200px] w-[200px] p-2 rounded-lg flex item-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white">
-                    <div>
+                    <div style="width: 150px; height: 220px;">
                     <img src="{{teachers.user.profile_photo.url}}" class="object-cover rounded-lg" style="height: 150px; width: 150px;" alt="{{teachers.user.first_name}} {{teachers.user.last_name}}">
                     <p>{{teachers.user.first_name}} {{teachers.user.last_name}}</p>
                     <p class="text-sm">{{teachers.classes.all|join:", "}}</p>
