--- a/templates/dashboards/all_teacher_pages/search_result.html
+++ b/templates/dashboards/all_teacher_pages/search_result.html
@@ -16,7 +16,7 @@
                 <div class="flex flex-wrap gap-3">
                     {% for teacher in teacher_results %}
                     <a href="{% url 'teacher_detail' teacher_id=teacher.user.id %}">
-                        <div class="h-[200px] w-[200px] p-2 rounded-lg flex items-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white">
+                        <div style="width: 150px; height: 220px;" class="p-2 rounded-lg flex items-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white">
                             <div>
                                 <img src="{{ teacher.user.profile_photo.url }}" class="object-cover rounded-lg" style="height: 150px; width: 150px;" alt="{{ teacher.user.first_name }} {{ teacher.user.last_name }}">
                                 <p>{{ teacher.user.first_name }} {{ teacher.user.last_name }}</p>
@@ -32,11 +32,12 @@
                 <h3 class="mt-2 text-lg font-medium text-gray-700">Students:</h3>
                 <div class="flex flex-wrap gap-3">
                     {% for student in student_results %}
-                    <a href="{% url 'teacher_class_student_details' student_id=student.user.id %}">
-                        <div class="h-[200px] w-[200px] p-2 rounded-lg flex items-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white">
+                        <div style="width: 150px; height: auto;" class="p-2 rounded-lg flex items-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white">
                             <div>
                                 <img src="{{ student.user.profile_photo.url }}" class="object-cover rounded-lg" style="height: 150px; width: 150px;" alt="{{ student.user.first_name }} {{ student.user.last_name }}">
                                 <p>{{ student.user.first_name }} {{ student.user.last_name }}</p>
+                                <p class="mb-2 text-white bg-blue-600 rounded-lg"><a href="{% url 'teacher_class_student_details' student_id=student.user.id %}">View Profile</a></p>
+                                <p class="text-white bg-blue-600 rounded-lg"><a href="{%url 'grade_student' student_id=student.id%}">Grade Student</a></p>
                             </div>
                         </div>
                     </a>
