--- a/templates/dashboards/all_student_pages/student_teachers.html
+++ b/templates/dashboards/all_student_pages/student_teachers.html
@@ -8,7 +8,7 @@
             {% if teacher_subjects %}
                 {% for teacher, subjects in teacher_subjects.items %}
                     <a href="{% url 'student_teacher_details' teacher_id=teacher.user.id %}">
-                        <div class="h-[200px] w-[200px] p-2 rounded-lg flex items-center justify-center text-center font-medium" style="background-color: #F9F9F9;">
+                        <div class="p-2 rounded-lg flex items-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white" style="width: 150px; height: 230px;">
                             <div>
                                 {% if teacher.user.profile_photo %}
                                     <img src="{{ teacher.user.profile_photo.url }}" class="rounded-lg" style="height: 150px; width: 150px; object-fit: cover;" alt="{{ teacher.user.first_name }} {{ teacher.user.last_name }}">
