--- a/templates/dashboards/all_teacher_pages/base.html
+++ b/templates/dashboards/all_teacher_pages/base.html
@@ -98,9 +98,9 @@
 
             <div class="notification-dropdown" id="notificationDropdown" style="display: none;">
                 <h2>Notifications</h2><br>
-                {% if notifications %}
+                {% if all_notifications %}
                     <ul>
-                        {% for notification in notifications %}
+                        {% for notification in all_notifications %}
                             <li class="border-b-2 border-white pb-1">
                                 <p>{{ notification.message }}</p>
                                 <small>{{ notification.created_at|date:"Y-m-d H:i" }}</small>
