--- a/templates/dashboards/all_teacher_pages/class_details.html
+++ b/templates/dashboards/all_teacher_pages/class_details.html
@@ -15,7 +15,7 @@
             {%if students%}
             {%for student in students%}
             <a href="{% url 'teacher_class_student_details' student_id=student.user.id %}">
-                <div class="h-[200px] w-[200px] p-2 rounded-lg flex item-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white">
+                <div style="width: 150px; height: 220px;" class="p-2 rounded-lg flex item-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white">
                     <div>
                         <img src="{{student.user.profile_photo.url}}" class="object-cover rounded-lg" style="height: 150px; width: 150px;" alt="{{student.user.first_name}} {{student.user.last_name}}">
                         <p>{{student.user.first_name}} {{student.user.last_name}}</p>
@@ -34,7 +34,7 @@
             {%if teachers%}
             {%for teacher in teachers%}
             <a href="{% url 'teacher_detail' teacher_id=teacher.user.id%}">
-                <div class="h-[200px] w-[200px] p-2 rounded-lg flex item-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white">
+                <div style="width: 150px; height: 220px;" class="p-2 rounded-lg flex item-center justify-center text-center font-medium hover:bg-blue-300 hover:text-white bg-white">
                     <div>
                     <img src="{{teacher.user.profile_photo.url}}" class="object-cover rounded-lg" style="height: 150px; width: 150px;" alt="{{teachers.user.first_name}} {{teachers.user.last_name}}">
                     <p>{{teacher.user.first_name}} {{teacher.user.last_name}}</p>
