--- a/templates/dashboards/all_teacher_pages/class_details.html
+++ b/templates/dashboards/all_teacher_pages/class_details.html
@@ -123,11 +123,31 @@
         </tbody>
     </table>
 </div>
-    </div>
-    {%if request.user.is_superuser%}
-    <p class="text-right p-3 mt-3  font-normal text-white"><a href="{%url 'edit_class' class_id=class.id%}" class="bg-blue-500 p-3 rounded-lg">Edit Class</a></p>
-    <p class="text-right p-3 mt-3  font-normal text-white"><a href="{%url 'delete_class' class_id=class.id%}" class="bg-red-500 p-3 rounded-lg">Delete Class</a></p>
-    {%else%}
-    {%endif%}            
+<p class="text-center p-5 my-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">Scheme Of Work Table</p>
+<div>
+    <table class="min-w-full py-3 rounded-lg" style="background-color: #F9F9F9;">
+        <thead>
+            <tr>
+                <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Week</th>
+                <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Subject Topics</th>
+                <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Subject Discriptions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for scheme_of_work in scheme_of_work %}
+            <tr>
+                <td class="pl-2 border-2 border-gray-300 w-44">{{scheme_of_work.week}}</td>
+                <td class="pl-2 border-2 border-gray-300 w-44">{{scheme_of_work.subject_date}}</td>
+                <td class="pl-2 border-2 border-gray-300 h-28">{{scheme_of_work.subject_topics}}</td>
+            </tr>
+            {%empty%}
+            <p>
+                No scheme of work yet
+            </p>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+    </div>            
 </div>
 {%endblock section%}
