--- a/templates/dashboards/all_teacher_pages/view_grade.html
+++ b/templates/dashboards/all_teacher_pages/view_grade.html
@@ -48,6 +48,18 @@
                         </tr>
                     </tbody>
                 </table>
+                {% if request.user == teacher.user and grade.subject in teacher_subjects %}
+                        <p class="p-3 font-normal">
+                            <a href="{% url 'update_grade_student' student_id=student.id grade_id=grade.id %}" class="bg-blue-500 p-2 rounded-lg hover:bg-blue-300" style="color: white;">
+                                <i class="fa-regular fa-pen-to-square fa-sm"></i><span>Update Grade</span>
+                            </a>
+                        </p>
+                        <p class="p-3 font-normal">
+                            <a href="{% url 'clear_grades' student_id=student.id grade_id=grade.id %}" class="bg-red-500 p-2 rounded-lg hover:bg-red-300" style="color: white;">
+                                <i class="fa-solid fa-trash-can fa-sm"></i> <span>Delete Grade</span>
+                            </a>
+                        </p>
+                    {% endif %}
             </div>
         {% endfor %}
         {%else%}
