--- a/templates/dashboards/all_teacher_pages/scheme_form.html
+++ b/templates/dashboards/all_teacher_pages/scheme_form.html
@@ -10,36 +10,41 @@
     {% endfor %}
     {% endif %}
     <div>
-        {% for subject, schemes in schemes_by_subject.items %}
-    <table class="min-w-full py-3 rounded-lg" style="background-color: #F9F9F9;">
-        <thead>
-            <tr>
-                <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Week</th>
-                <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Subject Topics</th>
-                <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Subject Descriptions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td colspan="3" class="font-bold">{{ subject }}</td>
-            </tr>
-            {% for scheme_of_work in schemes %}
-                <tr>
-                    <td class="pl-2 border-2 border-gray-300 w-44">{{ scheme_of_work.week }}</td>
-                    <td class="pl-2 border-2 border-gray-300 w-44">{{ scheme_of_work.subject_date }}</td>
-                    <td class="pl-2 border-2 border-gray-300 h-28">{{ scheme_of_work.subject_topics }}</td>
-                </tr>
-            {% empty %}
-                <tr>
-                    <td colspan="3">No scheme of work available for this subject.</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-{% empty %}
-    <p>No schemes of work available.</p>
-{% endfor %}
-
+        <div id="accordion">
+            {% for subject, schemes in schemes_by_subject.items %}
+                <h3 class="font-medium">
+                    Scheme Of Work For <span style="font-weight: bold;">{{subject}}</span>
+                </h3>
+                <div>
+                    <table class="min-w-full py-3 rounded-lg" style="background-color: #F9F9F9;">
+                        <thead>
+                            <tr>
+                                <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Week</th>
+                                <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Subject Topics</th>
+                                <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Subject Descriptions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for scheme_of_work in schemes %}
+                                <tr>
+                                    <td class="pl-2 border-2 border-gray-300 w-44">{{ scheme_of_work.week }} <br> 
+                                        <p class="p-3 font-normal"><a href="{%url 'update_class_scheme_of_work' class_id=class_info.id scheme_id=scheme_of_work.id%}" class="bg-blue-500 p-2 rounded-lg hover:bg-blue-300" style="color: white;"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Edit Scheme</span></a></p>
+                                    </td>
+                                    <td class="pl-2 border-2 border-gray-300 w-44">{{ scheme_of_work.subject_date }}</td>
+                                    <td class="pl-2 border-2 border-gray-300 h-28">{{ scheme_of_work.subject_topics }}</td>
+                                </tr>
+                            {% empty %}
+                                <tr>
+                                    <td colspan="3">No scheme of work available for this subject.</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            {%empty%}
+                <p class="bg-white text-gray-700 py-4 px-6 m-3 rounded-lg text-center font-medium text-2xl">No scheme of work available for this subject.</p>
+            {%endfor%}
+        </div>
     </div>
     <div>
         <p class="text-center p-5 my-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">Scheme Of Work Form</p>
