--- a/templates/dashboards/all_teacher_pages/class_details.html
+++ b/templates/dashboards/all_teacher_pages/class_details.html
@@ -126,9 +126,9 @@
 <p class="text-center p-5 my-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">Scheme Of Work Table</p>
 <div>
     <div id="accordion">
-        {% for scheme_of_work in scheme_of_work %}
+        {% for subject, schemes in schemes_by_subject.items %}
             <h3 class="font-medium">
-                Scheme of work {{scheme_of_work.subject}}
+                Scheme Of Work For <span style="font-weight: bold;">{{subject}}</span>
             </h3>
             <div>
                 <table class="min-w-full py-3 rounded-lg" style="background-color: #F9F9F9;">
@@ -136,24 +136,30 @@
                         <tr>
                             <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Week</th>
                             <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Subject Topics</th>
-                            <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Subject Discriptions</th>
+                            <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Subject Descriptions</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td class="pl-2 border-2 border-gray-300 w-44">{{scheme_of_work.week}}</td>
-                            <td class="pl-2 border-2 border-gray-300 w-44">{{scheme_of_work.subject_date}}</td>
-                            <td class="pl-2 border-2 border-gray-300 h-28">{{scheme_of_work.subject_topics}}</td>
-                        </tr>
-                        {%empty%}
-                        <p>
-                            No scheme of work yet
-                        </p>
+                        {% for scheme_of_work in schemes %}
+                            <tr>
+                                <td class="pl-2 border-2 border-gray-300 w-44">{{ scheme_of_work.week }}</td>
+                                <td class="pl-2 border-2 border-gray-300 w-44">{{ scheme_of_work.subject_date }}</td>
+                                <td class="pl-2 border-2 border-gray-300 h-28">{{ scheme_of_work.subject_topics }}</td>
+                            </tr>
+                        {% empty %}
+                            <tr>
+                                <td colspan="3">No scheme of work available for this subject.</td>
+                            </tr>
                         {% endfor %}
                     </tbody>
                 </table>
             </div>
+        {%empty%}
+            <p class="bg-white text-gray-700 py-4 px-6 m-3 rounded-lg text-center font-medium text-2xl">No scheme of work available for this subject.</p>
+        {%endfor%}
     </div>
+</div>
+</div>
     
 </div>
     </div>            
