--- a/templates/dashboards/all_admin_pages/classDetail.html
+++ b/templates/dashboards/all_admin_pages/classDetail.html
@@ -115,7 +115,41 @@
         </tbody>
     </table>
 </div>
-    </div>
+<p class="text-center p-5 my-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">Scheme Of Work Table</p>
+<div id="accordion">
+    {% for subject, schemes in schemes_by_subject.items %}
+        <h3 class="font-medium">
+            Scheme Of Work For <span style="font-weight: bold;">{{subject}}</span>
+        </h3>
+        <div>
+            <table class="min-w-full py-3 rounded-lg" style="background-color: #F9F9F9;">
+                <thead>
+                    <tr>
+                        <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Week</th>
+                        <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Subject Topics</th>
+                        <th class="py-2 px-2 border-2 border-r  border-gray-300 text-gray-600">Subject Descriptions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for scheme_of_work in schemes %}
+                        <tr>
+                            <td class="pl-2 border-2 border-gray-300 w-44">{{ scheme_of_work.week }}</td>
+                            <td class="pl-2 border-2 border-gray-300 w-44">{{ scheme_of_work.subject_date }}</td>
+                            <td class="pl-2 border-2 border-gray-300 h-28">{{ scheme_of_work.subject_topics }}</td>
+                        </tr>
+                    {% empty %}
+                        <tr>
+                            <td colspan="3">No scheme of work available for this subject.</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    {%empty%}
+        <p class="bg-white text-gray-700 py-4 px-6 m-3 rounded-lg text-center font-medium text-2xl">No scheme of work available for this subject.</p>
+    {%endfor%}
+</div>
+</div>
     <p class="p-3 mt-3  font-normal text-white"><a href="{%url 'edit_class' class_id=class.id%}" class="bg-blue-500 p-3 rounded-lg hover:bg-blue-300"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Edit Class</span></a></p>
     <p class="p-3 mt-3  font-normal text-white"><a href="{%url 'delete_class' class_id=class.id%}" class="bg-red-500 p-3 rounded-lg hover:bg-red-300"><i class="fa-solid fa-trash-can fa-sm"></i> <span class="pl-1">Delete Class</span></a></p>
 </div>
