--- a/templates/dashboards/all_teacher_pages/scheme_form.html
+++ b/templates/dashboards/all_teacher_pages/scheme_form.html
@@ -29,6 +29,7 @@
                                 <tr>
                                     <td class="pl-2 border-2 border-gray-300 w-44">{{ scheme_of_work.week }} <br> 
                                         <p class="p-1 font-normal"><a href="{%url 'update_class_scheme_of_work' class_id=class_info.id scheme_id=scheme_of_work.id%}" class="bg-blue-500 p-1 rounded-lg hover:bg-blue-300" style="color: white; font-size: 10px;"><span class="md:pl-1">Edit Scheme</span></a></p>
+                                        <p class="p-1 font-normal"><a href="{%url 'delete_scheme_of_work' class_id=class_info.id scheme_id=scheme_of_work.id%}" class="bg-red-500 p-1 rounded-lg hover:bg-red-300" style="color: white; font-size: 10px;"><span class="md:pl-1">Delete Scheme</span></a></p>
                                     </td>
                                     <td class="pl-2 border-2 border-gray-300 w-44">{{ scheme_of_work.subject_date }}</td>
                                     <td class="pl-2 border-2 border-gray-300 h-28">{{ scheme_of_work.subject_topics }}</td>
