feat: updating notifications

--- a/templates/dashboards/all_student_pages/annoucement.html
+++ b/templates/dashboards/all_student_pages/annoucement.html
@@ -13,7 +13,7 @@
         {%if posts%}
         {%for post in posts%}
             <h3>
-                <span class="font-semibold">{{post.title}}</span> - {{post.date_posted}}
+                <span class="font-semibold">{{post.subject}}</span> - {{post.date_posted}}
             </h3>
             <div>
                 <h1 class="annoucement_suject">{{post.subject}}</h1>
