--- a/templates/dashboards/all_teacher_pages/annoucements.html
+++ b/templates/dashboards/all_teacher_pages/annoucements.html
@@ -13,7 +13,7 @@
         {%if posts%}
         {%for post in posts%}
             <h3 class="font-medium">
-                {{post.title}} - {{post.date_posted}}
+                {{post.subject}} - {{post.date_posted}}
             </h3>
             <div>
                 <h1 class="annoucement_suject">{{post.subject}}</h1>
