--- a/templates/dashboards/all_admin_pages/create_annoucement.html
+++ b/templates/dashboards/all_admin_pages/create_annoucement.html
@@ -12,6 +12,10 @@
                 <p class="font-medium text-gray-700 mb-1">{{form.subject.label_tag}}</p>
                 {{form.subject}}
             </div>
+            <div class="my-6">
+                <p class="font-medium text-gray-700 mb-1">{{form.recipient_type.label_tag}}</p>
+                {{form.recipient_type}}
+            </div>
             <div class="mb-4">
                 <p class="font-medium text-gray-700 mb-1">{{form.description.label_tag}}</p>
                 {{form.description}}
