--- a/templates/dashboards/all_admin_pages/Annoucement.html
+++ b/templates/dashboards/all_admin_pages/Annoucement.html
@@ -16,9 +16,9 @@
     <div id="accordion">
         {%if posts%}
         {%for post in posts%}
-            <h3 class="font-medium">
-                {{post.subject}} - {{post.date_posted}}
-            </h3>
+        <h3>
+            <span class="font-semibold">{{post.subject}}</span> - {{post.date_posted}}
+        </h3>
             <div>
                 <h1 class="annoucement_suject">{{post.subject}}</h1>
                 <article class="mb-6">
