--- a/templates/dashboards/all_admin_pages/classDetail.html
+++ b/templates/dashboards/all_admin_pages/classDetail.html
@@ -87,12 +87,12 @@
     <table class="min-w-full py-3 rounded-lg" style="background-color: #F9F9F9;">
         <thead>
             <tr>
-                <th class="py-2 px-2 border-b border-r  border-gray-300 text-gray-600">Days</th>
-                <th class="py-2 px-2 border-b border-gray-300 text-gray-600">Subjects</th>
+                <th class="py-2 px-2 border-2  border-gray-300 text-gray-600">Days</th>
+                <th class="py-2 px-2 border-2 border-gray-300 text-gray-600">Subjects</th>
                 <th class="py-2 px-2 border-b border-gray-300"></th>
                 <th class="py-2 px-2 border-b border-gray-300"></th>
                 <th class="py-2 px-2 border-b border-gray-300"></th>
-                <th class="py-2 px-2 border border-gray-300 text-gray-600">BREAK</th>
+                <th class="py-2 px-2 border-2 border-gray-300 text-gray-600">BREAK</th>
                 <th class="py-2 px-2 border-b border-gray-300"></th>
                 <th class="py-2 px-2 border-b border-gray-300"></th>
                 <th class="py-2 px-2 border-b border-gray-300"></th>
@@ -101,15 +101,15 @@
         <tbody>
             {% for timetable in timetables %}
             <tr>
-                <td class="p-1 border-b border-r border-gray-300">{{ timetable.day_of_week }}<br><a href="{%url 'edit_timetable' table_id=timetable.id%}" class="text-blue-500 hover:text-blue-300 font-medium">Edit</a></td>
-                <td class="p-1 border-b border-gray-300 ">{{ timetable.subject_one.name }}<br>{{ timetable.subject_one_start_time }}-{{ timetable.subject_one_end_time }}</td>
-                <td class="p-1 border-b border-gray-300 ">{{ timetable.subject_two.name }}<br>{{ timetable.subject_two_start_time }}-{{ timetable.subject_two_end_time }}</td>
-                <td class="p-1 border-b border-gray-300 ">{{ timetable.subject_three.name }}<br>{{ timetable.subject_three_start_time }}-{{ timetable.subject_three_end_time }}</td>
-                <td class="p-1 border-b border-gray-300 ">{{ timetable.subject_four.name }}<br>{{ timetable.subject_four_start_time }}-{{ timetable.subject_four_end_time }}</td>
-                <td class="p-1 border border-gray-300 ">BREAK</td>
-                <td class="p-1 border-b border-gray-300 ">{{ timetable.subject_five.name }}<br>{{ timetable.subject_five_start_time }}-{{ timetable.subject_five_end_time }}</td>
-                <td class="p-1 border-b border-gray-300 ">{{ timetable.subject_six.name }}<br>{{ timetable.subject_six_start_time }}-{{ timetable.subject_six_end_time }}</td>
-                <td class="p-1 border-b border-gray-300 ">{{ timetable.subject_seven.name }}<br>{{ timetable.subject_seven_start_time }}-{{ timetable.subject_seven_end_time }}</td>
+                <td class="p-1 border-2 border-r border-gray-300">{{ timetable.day_of_week }}<br><a href="{%url 'edit_timetable' table_id=timetable.id%}" class="text-blue-500 hover:text-blue-300 font-medium">Edit</a></td>
+                <td class="p-1 border-2 border-gray-300 font-medium text-gray-700">{{ timetable.subject_one.name }}<br>{{ timetable.subject_one_start_time }}-{{ timetable.subject_one_end_time }}</td>
+                <td class="p-1 border-2 border-gray-300 font-medium text-gray-700font-medium text-gray-700">{{ timetable.subject_two.name }}<br>{{ timetable.subject_two_start_time }}-{{ timetable.subject_two_end_time }}</td>
+                <td class="p-1 border-2 border-gray-300 font-medium text-gray-700">{{ timetable.subject_three.name }}<br>{{ timetable.subject_three_start_time }}-{{ timetable.subject_three_end_time }}</td>
+                <td class="p-1 border-2 border-gray-300 font-medium text-gray-700">{{ timetable.subject_four.name }}<br>{{ timetable.subject_four_start_time }}-{{ timetable.subject_four_end_time }}</td>
+                <td class="p-1 border-2 border-gray-300 font-medium text-gray-700">{{ timetable.break_start_time }}<br>{{ timetable.break_end_time }}</td>
+                <td class="p-1 border-2 border-gray-300 font-medium text-gray-700">{{ timetable.subject_five.name }}<br>{{ timetable.subject_five_start_time }}-{{ timetable.subject_five_end_time }}</td>
+                <td class="p-1 border-2 border-gray-300 font-medium text-gray-700">{{ timetable.subject_six.name }}<br>{{ timetable.subject_six_start_time }}-{{ timetable.subject_six_end_time }}</td>
+                <td class="p-1 border-2 border-gray-300 font-medium text-gray-700">{{ timetable.subject_seven.name }}<br>{{ timetable.subject_seven_start_time }}-{{ timetable.subject_seven_end_time }}</td>
             </tr>
             {% endfor %}
         </tbody>
