--- a/templates/dashboards/all_teacher_pages/view_grade.html
+++ b/templates/dashboards/all_teacher_pages/view_grade.html
@@ -2,7 +2,11 @@
 {% load static %}
 {% block section %}
 <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600 m-3" style="background-color: #F9F9F9;">{{student|upper}} GRADES {{student.student_class|upper}} STUDENT</p>
-
+    {% if messages %}
+    {% for message in messages %}
+    <h3 class="bg-blue-100 text-blue-500 p-3 text-normal font-normal mb-6">{{ message }}</h3>
+    {% endfor %}
+    {% endif %}
 <div class="py-8 px-4 m-3 rounded-lg" style="background-color: #F9F9F9;">
     
     <div id="accordion">
